--- a/src/app/ui/ImageCard/styles.module.css
+++ b/src/app/ui/ImageCard/styles.module.css
@@ -1,7 +1,7 @@
 .card {
-  margin: 0;
+  margin: 0 0 0.5rem 0;
   padding: 1rem;
-  height: 400px;
+  min-height: 460px;
 
   font-size: var(--font-size-large);
   text-align: center;
